# zodiac-backend

./: DATABASE_MIGRATIONS.md  Dockerfile  MIGRATION_README.md  README.md  debug_api.py  pyproject.toml  requirements.txt  simple_migration.py  test_api.py  test_api_endpoint.py  test_api_with_auth.py  test_db.py  test_db_direct.py  vercel.json
app/: __init__.py  database.py  database_init.py  server.py
app/api/: auth.py  (+3 more)
converted/: 02dd266f-2167-4a7a-8d9b-8b74edbafd78_converted.x12  09be6629-14b7-4cd5-9f9f-c8e60b377cd4_converted.x12  104f83f9-b0fa-4afb-a444-58a13e0cd0e8_converted.x12  144dbac5-52bf-41e6-9eb8-bbdaa52ee120_converted.x12  1533a5b0-b8c3-4cf9-bf95-20d5ff4057f9_converted.x12  19783e63-581c-4ba3-bd67-982c3ba4ce73_converted.x12  19d1d778-2c5f-4cf4-b10b-92f098abc56e_converted.x12  1ec8c26d-0e15-435e-a790-a0f25711f562_converted.x12  1fd7b893-3b93-4ed9-af91-cf0b7315d5ea_converted.x12  26a187a4-b235-4696-9ba3-3af71e4c0cb8_converted.x12  28bcadde-929e-4891-a4ca-0e30ebc7455c_converted.x12  28bcadde-929e-4891-a4ca-0e30ebc7455c_converted_ai_fixed.x12  29663bf0-ffe9-45ac-be05-047dee2ef5e7_converted.x12  39cfc651-cdb7-4e34-a7c0-aa121a45cbb4_converted.x12  3c2ea00d-4eda-4da0-afed-87f9c8e5e0c4_converted.x12  3dcc8fab-3b87-48c1-a3c8-e03a34d0de83_converted.x12  3dcc8fab-3b87-48c1-a3c8-e03a34d0de83_converted_ai_fixed.x12  436d367b-667f-4b73-bc98-749d5cb8144f_converted.x12  4a98520d-3935-4afe-a670-f7ed13aab58a_converted.x12  550be1e4-3c48-4c85-97c1-f2aa4cf9d3af_converted.x12  582b2368-4e4f-4894-8cbb-21274059f434_converted.x12  58ac332a-4488-4376-a37b-61a8f1794d64_converted.x12  (+42 more)
(+42 files in other folders)
